fixed button alignment depending on screen size

--- a/cdap-ui/app/directives/widget-container/widget-function-dropdown-with-alias/widget-function-dropdown-with-alias.less
+++ b/cdap-ui/app/directives/widget-container/widget-function-dropdown-with-alias/widget-function-dropdown-with-alias.less
@@ -47,7 +47,7 @@ my-function-dropdown-with-alias {
       }
     }
     .btn-info {
-      @media(min-width: @screen-lg-min) {
+      @media (max-width: 801px), (min-width: @screen-lg-min) and (max-width: 1542px) {
         margin-top: 5px;
       }
     }
